<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/Cor1"
    tools:context=".Activity.QuestionsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/question_here"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"  >

            <RadioButton
                android:id="@+id/radio_button_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1" />

            <RadioButton
                android:id="@+id/radio_button_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2" />

            <RadioButton
                android:id="@+id/radio_button_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option3" />

            <RadioButton
                android:id="@+id/radio_button_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option4" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/send_reply" />

    </LinearLayout>

</FrameLayout>



