<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Cor1"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.MainActivity">


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Text_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:background="@color/Cor4"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/Cor1"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_best_of_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="@color/Cor4"
            android:gravity="center"
            android:text="@string/best_of_ten"
            android:textColor="@color/Cor3"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Text_welcome" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:background="@color/Cor2"
            android:gravity="center"
            android:text="@string/presentation"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@color/Cor2"
            android:hint="@string/inform_your_nickname"
            android:textColor="@color/Cor2"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button_init"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:text="@string/Play"
            android:textColor="@color/Cor1"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginTop="45sp"
            android:src="@drawable/pergunta" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

